@@ -1,3 +1,5 @@
+require 'nokogiri/xml/xpath/syntax_error'
+
 module Nokogiri
   module XML
     class XPath
