@@ -1,0 +1,8 @@
+module Nokogiri
+  module XML
+    class XPath
+      class SyntaxError < ::SyntaxError
+      end
+    end
+  end
+end
