@@ -2,6 +2,7 @@
 
 * Bugfixes
 
+  * XPath Parser raises a SyntaxError on parse failure
   * CSS Parser raises a SyntaxError on parse failure
   * filter() and not() hpricot compatibility added
 
